# saltlang

./: HUnitTestMain.hs  HUnitTests.hs  LICENSE  QuickCheckTests.hs  README  README.md  UnitTest.hs  UnitTestMain.hs  argentlang.cabal  saltlang.cabal  stack.yaml
Control/: HUnitTests.hs
Control/Monad/: HUnitTests.hs  ProofChecker.hs  ProofRecorder.hs
Control/Monad/Proof/: Class.hs
Control/Monad/ProofCheck/: Class.hs
Control/Monad/ProofErrors/: Class.hs
Control/Monad/ProofNames/: Class.hs
Control/Monad/ProofRecorder/: HUnitTests.hs
Control/Monad/TypeCheck/: Class.hs
Control/Monad/TypeErrors/: Class.hs
Distribution/TestSuite/: HUnit.hs  QuickCheck.hs
Language/: QuickCheckTests.hs
Language/Argent/: Core.hs
Language/Argent/Core/: PatternMatch.hs  Syntax.hs
Language/Argent/Surface/: AST.hs  Common.hs
Language/Salt/: QuickCheckTests.hs
Language/Salt/Core/: PatternMatch.hs  Patterns.hs  ProofScript.hs  QuickCheckTests.hs  Syntax.hs  TypeCheck.hs
Language/Salt/Core/PatternMatch/: QuickCheckTests.hs
Language/Salt/Core/Proofs/: ProofScript.hs  ProofState.hs
Language/Salt/Core/Syntax/: QuickCheckTests.hs
Language/Salt/Diagnostics/: ProofError.hs
Language/Salt/Surface/: AST.hs  Common.hs  Token.hs
Test/UnitTests/Control/: Monad.hs
Test/UnitTests/Control/Monad/: ProofRecorder.hs
Test/Utils/: ComboTests.hs
src/Control/Monad/: ProofRecorder.hs
src/Control/Monad/ProofNames/: Class.hs
src/Control/Monad/TypeCheck/: Class.hs
src/Control/Monad/TypeErrors/: Class.hs
src/Language/Salt/: Core.hs  Message.hs
src/Language/Salt/Surface/: Lexer.x  Token.hs
src/salt/Control/Monad/: ProofRecorder.hs
src/salt/Control/Monad/ProofErrors/: Class.hs
src/salt/Control/Monad/ProofNames/: Class.hs
src/salt/Control/Monad/ProofObligations/: Class.hs
src/salt/Control/Monad/Refs/: Class.hs
src/salt/Control/Monad/TypeCheck/: Class.hs
src/salt/Control/Monad/TypeRanks/: Class.hs
src/salt/Language/Salt/: Common.hs  Format.hs  Frontend.hs  Message.hs  Refs.hs
src/salt/Language/Salt/Core/: Normalize.hs  Patterns.hs  Syntax.hs  TypeCheck.hs
src/salt/Language/Salt/Core/Proofs/: ProofScript.hs
src/salt/Language/Salt/Core/Syntax/: Util.hs
src/salt/Language/Salt/Core/TypeCheck/: Env.hs  Rules.hs
src/salt/Language/Salt/Surface/: AST.hs  Collect.hs  Common.hs  Elaborate.hs  Lexer.x  Parser.y  Precedence.hs  Refs.hs  Resolve.hs  Scopes.hs  Syntax.hs  Token.hs  Transliterate.hs
src/salt/Language/Salt/Surface/Resolve/: Resolution.hs
src/saltc/Language/Salt/Compiler/: Driver.hs  Main.hs  Options.hs  Stages.hs
src/salti/Language/Salt/Interpreter/: Driver.hs  Main.hs  Options.hs
test/Test/: UnitTests.hs
test/Test/UnitTests/: Control.hs
test/Test/UnitTests/Control/Monad/: ProofRecorder.hs
test/Test/Utils/: ScratchDirs.hs
test/salt/Tests/: Control.hs
test/salt/Tests/Language/: Salt.hs
test/salt/Tests/Language/Salt/: Core.hs
test/salt/Tests/Language/Salt/Core/: Patterns.hs  Syntax.hs
test/salt/Tests/Language/Salt/Surface/: Lexer.hs
