Name:                   saltlang
Version:                0.0.0
Synopsis:               The Salt programming language.
Description:
  Salt is split into a surface syntax, which focuses on usability,
  design, and software engineering concerns, and a core language,
  which focuses on semantics, type checking, soundness proofs, and
  compilation.  The surface syntax is translated into core, then type
  checked, (optionally) verified, and ultimately compiled.  The
  language is designed this way to get around a frequent problem where
  the syntax of a language is easy to understand and use, but
  difficult to reason about (ie Java), or else easy to reason about
  but difficult and awkward to use (ie Haskell).
  .
  The type system and language is designed such that certain features
  can be enabled or disabled for different compilation modes, allowing
  different "layers" of a system to be built using the same language.
  .
  Salt core has four kinds of objects: values, types, computations,
  and propositions.  They are described more formally in the next
  section.  There are also (pure) functions over objects, as well as
  tuples, and nondetermisitic choice (all of which are themselves
  objects).
  .
  Values consist of primitive data types, and by extension, functions,
  tuples/records thereof.
  .
  Computations are stateful, possibly non-terminating, possibly
  concurrent procedures, which produce a value (note, unit is a value,
  per se), or continuations, which do not.
  .
  Propositions are similar to values except that they model a
  higher-order intuitionistic predicate logic.  The biggest difference
  between propositions and values is that equivalence between values
  is structural equivalence under normalization, which is decidable,
  while equivalence among propositions is full propositional
  equivalence (ie iff), which is not.
  .
  Types consist of dependent product and sum types (representing
  functions and tuples/records respectively), and pattern types
  (representing computations), as well as refinement types and type
  variables (some of which are pre-defined, such as integers).
  Pattern and refinement types are also constructed using
  propositions; as such, equivalence among types is also generally
  undecidable (though for the most part, it is in fact decidable).
  .
  Pattern types describe a computation's behavior in a concurrent
  setting in terms of the possible sequences of state transitions that
  might occur (in a manner similar to, but more powerful than regular
  expressions).  Individual states are described using higher-order
  intuitionistic predicate logic (ie functions producing
  propositions).
  .
  Most such descriptions use a higher-order separation logic, which we
  are able to denote in Salt itself, using the more basic
  higher-order intuitionistic logic.
  .
  Since equivalence among types and propositions is decidable,
  computations and functions are generally not allowed to operate on
  either domain for normal execution modes, and there is no primitive
  construct which produces a value from a type or proposition.
  .
  It may be possible to add constructs based on simple equality (as
  opposed to full equivalence) that would allow computation on types
  or propositions, however.  This opens the door to powerful
  metaprogramming capabilities.
  .
  Type checking is designed to split into two distinct phases.  The
  first phase is a decidable (or mostly decidable) phase, which makes
  guarantees roughly equivalent to those made by Haskell or Standard
  ML's type systems.  The first phase also produces a set of
  verification conditions, which must be proven to ensure full
  correctness.  The second phase consists of an undecidable procedure
  for discharging the verification conditions.  Generally, the
  compiler will not require the second phase to complete before
  compiling a program.  This is designed to allow a number of
  different strategies for the verification phase ranging over varying
  levels of soundness, including 1) automated theorem proving, 2)
  interactive (manual) theorem proving, 3) embedding proofs in the
  code, 4) using the verification conditions as inputs to a model
  checking framework, 5) deriving debugging or testing information, 6)
  inserting runtime assertions, or 7) ignoring them completely.
License:                BSD3
Author:                 Eric McCorkle
Maintainer:             eric@metricspace.net
Stability:              Development
Category:               Languages
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:saltlang/saltlang.git


Test-Suite library-UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       src/library test/library
  build-depends:        base >= 4.8 && < 5, Cabal >= 1.16.0, compiler-toolbox, bound,
                        containers, prelude-extras, mtl >= 2.2, hashable, hashable-extras,
                        bytestring, utf8-string, hexpat, hexpat-pickle, array,
                        filepath, blaze-builder, dynamic-pprint, unordered-containers,
                        semigroups, data-default, bitwise, HUnit-Plus,
                        monad-journal

Executable saltc
  default-language:     Haskell2010
  build-depends:        base, compiler-toolbox, bound, containers, prelude-extras,
                        mtl, hashable, hashable-extras, bytestring, utf8-string,
                        hexpat, hexpat-pickle, array, saltlang, filepath,
                        blaze-builder, dynamic-pprint, bitwise
  hs-source-dirs:       src/saltc
  main-is:              Language/Salt/Compiler/Main.hs


--Executable salti
--  default-language:     Haskell2010
--  build-depends:        base, compiler-misc, bound, containers, prelude-extras,
--                        mtl, hashable, hashable-extras, bytestring, utf8-string,
--                        hexpat, hexpat-pickle, array, saltlang, readline
--  hs-source-dirs:       src/salti
--  main-is:              Language/Salt/Interpreter/Main.hs

Library
  default-language:     Haskell2010
  build-depends:        base, compiler-toolbox, bound, containers, prelude-extras,
                        mtl >= 2.2, hashable, hashable-extras, bytestring, utf8-string,
                        hexpat, hexpat-pickle, array, unordered-containers,
                        hashtables, filepath, semigroups, dynamic-pprint, data-default,
                        monad-journal, bitwise, fgl >= 5.5.3, bifunctors
  build-tools:          alex >= 3.2, happy
  hs-source-dirs:       src/salt
  exposed-modules:      
--                        Control.Monad.ProofChecker,
--                        Control.Monad.ProofErrors.Class,
--                        Control.Monad.ProofNames.Class,
--                        Control.Monad.ProofObligations.Class,
--                        Control.Monad.ProofRecorder,
--                        Control.Monad.TypeErrors.Class,
--                        Control.Monad.TypeCheck.Class,
                        Control.Monad.Refs.Class
--                        Language.Salt.Core,
                        Language.Salt.Core.Patterns,
                        Language.Salt.Core.Syntax,
--                        Language.Salt.Core.TypeCheck,
                        Language.Salt.Format
                        Language.Salt.Frontend
                        Language.Salt.Message
                        Language.Salt.Refs
                        Language.Salt.Surface.AST
                        Language.Salt.Surface.Collect
                        Language.Salt.Surface.Common
                        Language.Salt.Surface.Lexer
                        Language.Salt.Surface.Parser
                        Language.Salt.Surface.Precedence
--                        Language.Salt.Core.Proofs.ProofScript,
--                        Language.Salt.Core.Proofs.ProofState,
                        Language.Salt.Surface.Syntax
                        Language.Salt.Surface.Token

